tests/valid_seq/bug100_helper_2.m
%---------------------------------------------------------------------------%
% vim: ts=4 sw=4 et ft=mercury
%---------------------------------------------------------------------------%

:- module bug100_helper_2.
:- interface.

:- typeclass tc2(T) where [].

:- implementation.
